# Notificator

./: .gitignore  CMakeLists.txt  Manager.cpp  Manager.h  README.md  main.cpp
error/: Error.cpp  Error.h  ErrorHandler.h  ExceptionErrorHandler.cpp  ExceptionErrorHandler.h  IgnoreErrorHandler.cpp  IgnoreErrorHandler.h  LogErrorHandler.cpp  LogErrorHandler.h
message/: BinaryMessage.cpp  BinaryMessage.h  Message.h  TextMessage.cpp  TextMessage.h
notificator/: EmailNotificator.cpp  EmailNotificator.h  LogNotificator.cpp  LogNotificator.h  Notificator.h  NullNotificator.cpp  NullNotificator.h  TelegramNotificator.cpp  TelegramNotificator.h
recipient/: Contact.cpp  Contact.h  EmailRecipient.cpp  EmailRecipient.h  LogRecipient.cpp  LogRecipient.h  Recipient.h  TelegramRecipient.cpp  TelegramRecipient.h
